# libusb-android-prefab

./: .gitmodules  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
libusb/: build.gradle
libusb/src/main/: AndroidManifest.xml
libusb/src/main/cpp/: CMakeLists.txt
libusb/src/main/cpp/include/: libusb.h
